--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ VERSION: v1.5.1-header-branding
     border-radius:999px;
     font-weight:500;
   ">
-    선물세트 금요일 ~ 수요일 • 오후 4시 마감
+    19일(목) ~ 25일(수) • 오후 4시 마감
   </div>
 
 </div>
@@ -342,15 +342,15 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 1 -->
-<div class="product" data-product-id="p001" data-price="45980" data-regular-price="74700">
+<div class="product" data-product-id="p001" data-price="19900" data-regular-price="44700">
   <img src="images/product1.png">
   <div class="product-body">
-    <div class="name">설성한우 선물세트</div>
-    <div class="stock-badge">*택배원하실 경우 + 택배비3500원, 주소는 채팅방운영자에게 1:1톡으로 남겨주세요*</div>
+    <div class="name">쭈꾸미1+낙지1세트</div>
+    <div class="stock-badge">*50세트한정! 상품수령일 선택 후 입금해주세요*</div>
 
     <div class="price">
-      <div class="price-regular">정상구매가 <span>74,700원</span></div>
-      <div class="price-sale">공동구매가 <span>45,980원</span></div>
+      <div class="price-regular">정상구매가 <span>44,700원</span></div>
+      <div class="price-sale">공동구매가 <span>19,900원</span></div>
       <div class="price-save" data-save-line="1"></div>
     </div>
 
@@ -866,6 +866,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
