--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ VERSION: v1.5.1-header-branding
     border-radius:999px;
     font-weight:500;
   ">
-    19일(목) ~ 25일(수) • 오후 4시 마감
+    23일(목) ~ 25일(수) • 오후 4시 마감
   </div>
 
 </div>
@@ -341,8 +341,11 @@ VERSION: v1.5.1-header-branding
   </div>
 </div>
 
+
+ 
 <!-- 상품 1 -->
-<div class="product" data-product-id="p001" data-price="19900" data-regular-price="44700">
+
+<div class="product" data-product-id="p001" data-price="5980" data-regular-price="8500" data-price-mode="sale">
   <img src="images/product1.png">
   <div class="product-body">
     <div class="name">쭈꾸미1+낙지1세트</div>
@@ -363,7 +366,7 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 2
-<div class="product limited" data-product-id="p002" data-price="10980" data-regular-price="31500">
+<div class="product limited" data-product-id="p002" data-price="10980" data-regular-price="31500" data-price-mode="sale">
   <img src="images/product2.png">
   <div class="product-body">
     <div class="name">1+등급 무항생제 한우 등심국거리300g</div>
@@ -605,12 +608,34 @@ document.querySelectorAll(".product").forEach(p => {
   };
 });
 
+// [PATCH-PRICE-MODE] 가격 표시 모드
+// 기본: sale (공동구매가만 표시)
+// full: 정상가 + 공동구매가 + 할인배지 표시
+function applyPriceMode(card) {
+  const mode = String(card.dataset.priceMode || "sale").toLowerCase();
+  const regularLine = card.querySelector(".price-regular");
+  const saveEl = card.querySelector('[data-save-line="1"]');
+
+  if (mode === "sale") {
+    if (regularLine) regularLine.style.display = "none";
+    if (saveEl) {
+      saveEl.style.display = "none";
+      saveEl.innerText = "";
+    }
+  } else {
+    if (regularLine) regularLine.style.display = "";
+  }
+}
+
+
+ 
 function calc() {
   let saleSum = 0;      // 총 결제금액(판매가 합)
   let regularSum = 0;   // 상품금액합계(정상구매가 있으면 정상구매가, 없으면 판매가)
   let discountSum = 0;  // 공동구매가 할인(정상구매가 있는 품목만)
 
   document.querySelectorAll(".product").forEach(p => {
+    applyPriceMode(p); 
     const qty = Number(p.querySelector(".qty").innerText);
     const salePrice = Number(p.dataset.price);
     const hasRegular = (p.dataset.regularPrice !== undefined && p.dataset.regularPrice !== "");
@@ -866,6 +891,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
