--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@ VERSION: v1.5.1-header-branding
 <div class="product" data-product-id="p001" data-price="5980" data-regular-price="8500" data-price-mode="sale">
   <img src="images/product1.png">
   <div class="product-body">
-    <div class="name">쭈꾸미1+낙지1세트</div>
-    <div class="stock-badge">*30세트한정! 상품수령일 선택 후 입금해주세요*</div>
+    <div class="name">무항생제 한우1++300g세절 + 골든커리(순한맛) </div>
+    <div class="stock-badge">*100세트한정! 상품수령일 선택 후 입금해주세요*</div>
 
     <div class="price">
       <div class="price-regular">정상구매가 <span>44,700원</span></div>
-      <div class="price-sale">공동구매가 <span>19,900원</span></div>
+      <div class="price-sale">공동구매가 <span>15,900원</span></div>
       <div class="price-save" data-save-line="1"></div>
     </div>
 
@@ -891,6 +891,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
