--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ VERSION: v1.5.1-header-branding
     <div class="stock-badge">*100세트한정! 상품수령일 선택 후 입금해주세요*</div>
 
     <div class="price">
-     <!--
+     <!-- 임시막음
      <div class="price-regular">정상구매가 <span>원</span></div>
      -->
       <div class="price-sale">공동구매가 <span>15,900원</span></div>
@@ -450,6 +450,8 @@ VERSION: v1.5.1-header-branding
 </div>
 
  -->
+
+   <!-- // 임시 막음
  
 <div class="total">
   <div>상품금액합계: <span id="regularTotal">0</span>원</div>
@@ -459,6 +461,8 @@ VERSION: v1.5.1-header-branding
     <span id="discountValue" class="money-red">-0</span>원
   </div>
 
+ -->
+ 
   <div style="margin-top:6px; font-size:18px; font-weight:800;">
     총 결제금액: <span id="total" class="money-blue">0</span>원
   </div>
@@ -868,6 +872,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
