--- a/dev/index.html
+++ b/dev/index.html
@@ -924,6 +924,107 @@ copyBtn.onclick = () => {
 
 </script>
 
+<script>
+/**
+ * [DEBUG + FAILSAFE QTY BINDING]
+ * - 콘솔(F12) 없이도 JS 실행 여부/에러를 화면에 표시
+ * - 메인 스크립트가 깨져도 +/− 버튼을 이벤트 위임으로 살림
+ */
+
+(function () {
+  // 상단 디버그 바
+  const bar = document.createElement("div");
+  bar.id = "__debugBar";
+  bar.style.cssText = "position:fixed;left:0;top:0;right:0;z-index:99999;padding:8px 10px;background:#111;color:#fff;font-size:12px;line-height:1.4;opacity:.95";
+  bar.textContent = "DEBUG: script loaded";
+  document.body.appendChild(bar);
+
+  function setBar(msg) {
+    bar.textContent = "DEBUG: " + msg;
+  }
+
+  // 런타임 에러 표시
+  window.addEventListener("error", function (e) {
+    setBar("ERROR: " + (e.message || e.type));
+  });
+
+  // 버튼 존재 확인
+  const products = document.querySelectorAll(".product");
+  const plusCount = document.querySelectorAll(".plus").length;
+  const minusCount = document.querySelectorAll(".minus").length;
+  setBar("products=" + products.length + " plus=" + plusCount + " minus=" + minusCount);
+
+  // calc 존재 여부
+  const hasCalc = (typeof window.calc === "function");
+  if (!hasCalc) {
+    // calc이 없으면 최소 합계 계산(판매가 합)만 제공
+    window.calc = function () {
+      let saleSum = 0;
+      document.querySelectorAll(".product").forEach(p => {
+        const qtyEl = p.querySelector(".qty");
+        if (!qtyEl) return;
+        const qty = Number(qtyEl.innerText) || 0;
+        const salePrice = Number(p.dataset.price) || 0;
+        saleSum += salePrice * qty;
+      });
+      const totalEl = document.getElementById("total");
+      if (totalEl) totalEl.innerText = saleSum.toLocaleString();
+    };
+    setBar("calc() was missing -> fallback calc injected");
+  }
+
+  // 이벤트 위임으로 +/− 살리기
+  document.addEventListener("click", function (e) {
+    const t = e.target;
+
+    // 오버레이가 클릭을 가로채는지 검사(가장 흔한 원인)
+    if (t && (t.classList.contains("plus") || t.classList.contains("minus"))) {
+      const rect = t.getBoundingClientRect();
+      const x = rect.left + rect.width / 2;
+      const y = rect.top + rect.height / 2;
+      const topEl = document.elementFromPoint(x, y);
+      if (topEl && topEl !== t && !t.contains(topEl)) {
+        // 버튼 위에 다른 요소가 덮고 있음
+        setBar("CLICK BLOCKED by: " + (topEl.className || topEl.tagName));
+        // 덮고 있는 요소가 soldout overlay면 자동으로 숨김(임시)
+        if (String(topEl.className || "").includes("soldout-overlay")) {
+          topEl.style.display = "none";
+          setBar("soldout-overlay was blocking -> hidden (temp)");
+        }
+      }
+    }
+
+    const isPlus = t && t.classList && t.classList.contains("plus");
+    const isMinus = t && t.classList && t.classList.contains("minus");
+    if (!isPlus && !isMinus) return;
+
+    // disabled면 무시
+    if (t.disabled) {
+      setBar((isPlus ? "+" : "-") + " ignored (disabled)");
+      return;
+    }
+
+    const card = t.closest(".product");
+    if (!card) return;
+
+    const qtyEl = card.querySelector(".qty");
+    if (!qtyEl) return;
+
+    const cur = Number(qtyEl.innerText) || 0;
+    const next = isPlus ? (cur + 1) : Math.max(0, cur - 1);
+    qtyEl.innerText = String(next);
+
+    try {
+      window.calc();
+      setBar((isPlus ? "+" : "-") + " ok qty=" + next);
+    } catch (err) {
+      setBar("calc() failed: " + String(err));
+    }
+  }, true);
+})();
+</script>
+
+ 
 </body>
 </html>
 
