--- a/dev/index.html
+++ b/dev/index.html
@@ -939,9 +939,10 @@ copyBtn.onclick = () => {
   bar.textContent = "DEBUG: script loaded";
   document.body.appendChild(bar);
 
-  function setBar(msg) {
-    bar.textContent = "DEBUG: " + msg;
-  }
+function setBar(msg) {
+  bar.textContent = "DEBUG: " + msg;
+  alert("DEBUG: " + msg); // ← 복사 필요 없이 바로 확인
+}
 
   // 런타임 에러 표시
   window.addEventListener("error", function (e) {
