--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ VERSION: v1.5.1-header-branding
     border-radius:999px;
     font-weight:500;
   ">
-    23일(월) ~ 25일(수) • 오후 4시 마감
+    2일(월) ~ 4일(수) • 오후 4시 마감
   </div>
 
 </div>
@@ -342,17 +342,17 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 1 -->
-<div class="product" data-product-id="p001" data-price="15900" data-regular-price="15900">
+<div class="product" data-product-id="p001" data-price="15980" data-regular-price="15980">
   <img src="images/product1.png">
   <div class="product-body">
-    <div class="name">1++무항생제 한우세절 300g + 골든커리(순한맛)</div>
-    <div class="stock-badge">*100세트한정! 상품수령일 선택 후 입금해주세요*</div>
+    <div class="name">살치살(시즈닝)스테이크용500g</div>
+    <div class="stock-badge">*50세트한정! 상품수령일 선택 후 입금해주세요*</div>
 
     <div class="price">
      <!-- 임시막음
      <div class="price-regular">정상구매가 <span>원</span></div>
      -->
-      <div class="price-sale">공동구매가 <span>15,900원</span></div>
+      <div class="price-sale">공동구매가 <span>15,980원</span></div>
       <div class="price-save" data-save-line="1"></div>
     </div>
 
@@ -872,6 +872,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
